# ml-internship-interview

./: README.md  internship-interview.ipynb  pyproject.toml  requirements.txt
